[gd_scene load_steps=2 format=3 uid="uid://dl6t8dqsvo35i"]

[ext_resource type="Script" path="res://scenes/Actor.gd" id="1_c0co2"]

[node name="ActorReplica" type="CharacterBody2D"]
y_sort_enabled = true
collision_mask = 4
script = ExtResource("1_c0co2")

[node name="Actions" type="Node" parent="."]

[node name="Sprite" type="AnimatedSprite2D" parent="."]
centered = false

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 8

[node name="HitboxTriggerCooldownTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2

[connection signal="heading_change" from="." to="." method="_on_heading_change"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
